[gd_scene load_steps=14 format=3 uid="uid://0whnvxusnrcb"]

[ext_resource type="Script" path="res://Player/game_handler.gd" id="1_l7oeo"]
[ext_resource type="Texture2D" uid="uid://b16q7kqq86ywc" path="res://Sprites/GUI/item_box.png" id="2_f3oh7"]
[ext_resource type="Texture2D" uid="uid://cedowew0qbn2o" path="res://Sprites/GUI/ability_box.png" id="4_mujsc"]
[ext_resource type="Script" path="res://Player/cooldown_timer.gd" id="5_dr18i"]
[ext_resource type="Texture2D" uid="uid://cgrpa0xq1e02m" path="res://Sprites/GUI/radial_fill.png" id="5_w6rtu"]
[ext_resource type="Texture2D" uid="uid://d2s6gmat54vcl" path="res://Sprites/Items/Weapons/sword.png" id="7_m2irn"]
[ext_resource type="Script" path="res://Player/level_up_panel.gd" id="7_xs7iq"]
[ext_resource type="Script" path="res://Player/ability_panel.gd" id="8_nbmf6"]
[ext_resource type="Script" path="res://Player/ability_frame.gd" id="9_0lona"]
[ext_resource type="Script" path="res://Player/game_over_panel.gd" id="9_oqx23"]
[ext_resource type="Script" path="res://Player/item_frame.gd" id="9_pi83r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1it3r"]
bg_color = Color(0.6, 0.6, 0.6, 0.152941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2aw4c"]
bg_color = Color(0, 0.627451, 0.992157, 1)

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_l7oeo")

[node name="ItemBoxSprite" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.005
anchor_right = 0.005
anchor_bottom = 0.005
offset_right = 86.0
offset_bottom = 35.0
texture = ExtResource("2_f3oh7")

[node name="EquipmentContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.005
anchor_right = 0.005
anchor_bottom = 0.005
offset_left = 1.0
offset_top = 1.0
offset_right = 85.0
offset_bottom = 36.0
theme_override_constants/separation = 1

[node name="WeaponContainer" type="HBoxContainer" parent="EquipmentContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Weapon1" type="TextureRect" parent="EquipmentContainer/WeaponContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Weapon2" type="TextureRect" parent="EquipmentContainer/WeaponContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Weapon3" type="TextureRect" parent="EquipmentContainer/WeaponContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Weapon4" type="TextureRect" parent="EquipmentContainer/WeaponContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Weapon5" type="TextureRect" parent="EquipmentContainer/WeaponContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="ItemContainer" type="HBoxContainer" parent="EquipmentContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Item1" type="TextureRect" parent="EquipmentContainer/ItemContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Item2" type="TextureRect" parent="EquipmentContainer/ItemContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Item3" type="TextureRect" parent="EquipmentContainer/ItemContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Item4" type="TextureRect" parent="EquipmentContainer/ItemContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Item5" type="TextureRect" parent="EquipmentContainer/ItemContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="AbilityBoxSprite" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.115
anchor_right = 0.005
anchor_bottom = 0.115
offset_right = 100.0
offset_bottom = 34.0
texture = ExtResource("4_mujsc")

[node name="AbilityContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.115
anchor_right = 0.005
anchor_bottom = 0.115
offset_left = 0.8
offset_top = 0.599998
offset_right = 100.8
offset_bottom = 32.6
theme_override_constants/separation = 1

[node name="ActiveAbilitySprite" type="TextureRect" parent="AbilityContainer"]
unique_name_in_owner = true
modulate = Color(0.662745, 0.662745, 0.662745, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SecondaryAbilitySprite" type="TextureRect" parent="AbilityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="PassiveAbilitySprite" type="TextureRect" parent="AbilityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="AbilityCooldownContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.115
anchor_right = 0.005
anchor_bottom = 0.115
offset_left = 0.8
offset_top = 0.599998
offset_right = 100.8
offset_bottom = 32.6
theme_override_constants/separation = 1

[node name="ActiveAbilityProgress" type="TextureProgressBar" parent="AbilityCooldownContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
max_value = 50.0
fill_mode = 4
texture_progress = ExtResource("5_w6rtu")
tint_progress = Color(0.752941, 0.752941, 0.752941, 0.823529)
script = ExtResource("5_dr18i")

[node name="Timer" type="Timer" parent="AbilityCooldownContainer/ActiveAbilityProgress"]
one_shot = true

[node name="SecondaryAbilityProgress" type="TextureProgressBar" parent="AbilityCooldownContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
max_value = 50.0
fill_mode = 4
texture_progress = ExtResource("5_w6rtu")
tint_progress = Color(0.752941, 0.752941, 0.752941, 0.823529)
script = ExtResource("5_dr18i")

[node name="Timer" type="Timer" parent="AbilityCooldownContainer/SecondaryAbilityProgress"]
one_shot = true

[node name="PassiveAbilityProgress" type="TextureProgressBar" parent="AbilityCooldownContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
max_value = 50.0
fill_mode = 4
texture_progress = ExtResource("5_w6rtu")
tint_progress = Color(0.752941, 0.752941, 0.752941, 0.823529)
script = ExtResource("5_dr18i")

[node name="Timer" type="Timer" parent="AbilityCooldownContainer/PassiveAbilityProgress"]
one_shot = true

[node name="BarContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 20)
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.225
anchor_right = 0.05
anchor_bottom = 0.225
offset_right = 96.2
offset_bottom = 40.0

[node name="HealthBar" type="TextureProgressBar" parent="BarContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("5_w6rtu")
texture_progress = ExtResource("5_w6rtu")
tint_under = Color(0.313726, 0.313726, 0.313726, 0.670588)
tint_progress = Color(0.745098, 0, 0, 1)

[node name="UndeadBar" type="TextureProgressBar" parent="BarContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
max_value = 45.0
nine_patch_stretch = true
texture_under = ExtResource("5_w6rtu")
texture_progress = ExtResource("5_w6rtu")
tint_under = Color(0.313726, 0.313726, 0.313726, 0.670588)
tint_progress = Color(0, 0.470588, 0.262745, 1)

[node name="UndeadRefillTimer" type="Timer" parent="BarContainer/UndeadBar"]
process_mode = 1
autostart = true

[node name="ExpBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(640, 10)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_1it3r")
theme_override_styles/fill = SubResource("StyleBoxFlat_2aw4c")
value = 50.0
show_percentage = false

[node name="LevelUpPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("7_xs7iq")

[node name="Label" type="Label" parent="LevelUpPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 49.0
grow_horizontal = 2
text = "Level up!
Pick an item"
horizontal_alignment = 1

[node name="TextureContainer" type="HBoxContainer" parent="LevelUpPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -62.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Spacer3" type="Control" parent="LevelUpPanel/TextureContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item0" type="VBoxContainer" parent="LevelUpPanel/TextureContainer"]
layout_mode = 2
script = ExtResource("9_pi83r")

[node name="Texture" type="TextureRect" parent="LevelUpPanel/TextureContainer/Item0"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("7_m2irn")
stretch_mode = 5

[node name="Label" type="Label" parent="LevelUpPanel/TextureContainer/Item0"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Sword
A sword slashed where you are aiming"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer" type="Control" parent="LevelUpPanel/TextureContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item1" type="VBoxContainer" parent="LevelUpPanel/TextureContainer"]
layout_mode = 2
script = ExtResource("9_pi83r")

[node name="Texture" type="TextureRect" parent="LevelUpPanel/TextureContainer/Item1"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("7_m2irn")
stretch_mode = 5

[node name="Label" type="Label" parent="LevelUpPanel/TextureContainer/Item1"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Sword
A sword slashed where you are aiming"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="LevelUpPanel/TextureContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item2" type="VBoxContainer" parent="LevelUpPanel/TextureContainer"]
layout_mode = 2
script = ExtResource("9_pi83r")

[node name="Texture" type="TextureRect" parent="LevelUpPanel/TextureContainer/Item2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("7_m2irn")
stretch_mode = 5

[node name="Label" type="Label" parent="LevelUpPanel/TextureContainer/Item2"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Sword
A sword slashed where you are aiming"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer4" type="Control" parent="LevelUpPanel/TextureContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AbilityPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("8_nbmf6")

[node name="Label" type="Label" parent="AbilityPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 49.0
grow_horizontal = 2
text = "NOT DEAD YET!
Select a new ability!"
horizontal_alignment = 1

[node name="TextureContainer" type="HBoxContainer" parent="AbilityPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -62.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Spacer3" type="Control" parent="AbilityPanel/TextureContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item0" type="VBoxContainer" parent="AbilityPanel/TextureContainer"]
layout_mode = 2
script = ExtResource("9_0lona")

[node name="Texture" type="TextureRect" parent="AbilityPanel/TextureContainer/Item0"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("7_m2irn")
stretch_mode = 5

[node name="Label" type="Label" parent="AbilityPanel/TextureContainer/Item0"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Sword
A sword slashed where you are aiming"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer" type="Control" parent="AbilityPanel/TextureContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item1" type="VBoxContainer" parent="AbilityPanel/TextureContainer"]
layout_mode = 2
script = ExtResource("9_0lona")

[node name="Texture" type="TextureRect" parent="AbilityPanel/TextureContainer/Item1"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("7_m2irn")
stretch_mode = 5

[node name="Label" type="Label" parent="AbilityPanel/TextureContainer/Item1"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Sword
A sword slashed where you are aiming"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="AbilityPanel/TextureContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item2" type="VBoxContainer" parent="AbilityPanel/TextureContainer"]
layout_mode = 2
script = ExtResource("9_0lona")

[node name="Texture" type="TextureRect" parent="AbilityPanel/TextureContainer/Item2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("7_m2irn")
stretch_mode = 5

[node name="Label" type="Label" parent="AbilityPanel/TextureContainer/Item2"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Sword
A sword slashed where you are aiming"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer4" type="Control" parent="AbilityPanel/TextureContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("9_oqx23")

[node name="Label" type="Label" parent="GameOverPanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER
The necromancer continues their reign, waiting for the next foolish opponent to fight..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 0.85
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="Control2" type="Control" parent="GameOverPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RestartButton" type="Button" parent="GameOverPanel/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
disabled = true
text = "Restart"

[node name="Control" type="Control" parent="GameOverPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuButton" type="Button" parent="GameOverPanel/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
disabled = true
text = "Menu"

[node name="Control3" type="Control" parent="GameOverPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.925
anchor_top = 0.025
anchor_right = 0.925
anchor_bottom = 0.025
offset_left = -40.0
offset_bottom = 12.0
grow_horizontal = 0
scale = Vector2(2, 2)
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="AbilityCooldownContainer/ActiveAbilityProgress/Timer" to="AbilityCooldownContainer/ActiveAbilityProgress" method="_on_timer_timeout"]
[connection signal="timeout" from="AbilityCooldownContainer/SecondaryAbilityProgress/Timer" to="AbilityCooldownContainer/SecondaryAbilityProgress" method="_on_timer_timeout"]
[connection signal="timeout" from="AbilityCooldownContainer/PassiveAbilityProgress/Timer" to="AbilityCooldownContainer/PassiveAbilityProgress" method="_on_timer_timeout"]
[connection signal="timeout" from="BarContainer/UndeadBar/UndeadRefillTimer" to="." method="_on_undead_refill_timer_timeout"]
[connection signal="mouse_entered" from="LevelUpPanel/TextureContainer/Item0" to="LevelUpPanel/TextureContainer/Item0" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelUpPanel/TextureContainer/Item0" to="LevelUpPanel/TextureContainer/Item0" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelUpPanel/TextureContainer/Item1" to="LevelUpPanel/TextureContainer/Item1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelUpPanel/TextureContainer/Item1" to="LevelUpPanel/TextureContainer/Item1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelUpPanel/TextureContainer/Item2" to="LevelUpPanel/TextureContainer/Item2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelUpPanel/TextureContainer/Item2" to="LevelUpPanel/TextureContainer/Item2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="AbilityPanel/TextureContainer/Item0" to="AbilityPanel/TextureContainer/Item0" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AbilityPanel/TextureContainer/Item0" to="AbilityPanel/TextureContainer/Item0" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="AbilityPanel/TextureContainer/Item1" to="AbilityPanel/TextureContainer/Item1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AbilityPanel/TextureContainer/Item1" to="AbilityPanel/TextureContainer/Item1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="AbilityPanel/TextureContainer/Item2" to="AbilityPanel/TextureContainer/Item2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AbilityPanel/TextureContainer/Item2" to="AbilityPanel/TextureContainer/Item2" method="_on_mouse_exited"]
[connection signal="pressed" from="GameOverPanel/HBoxContainer/RestartButton" to="GameOverPanel" method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverPanel/HBoxContainer/MenuButton" to="GameOverPanel" method="_on_menu_button_pressed"]
